--- a/example-ui/ui2/css/ui2.css
+++ b/example-ui/ui2/css/ui2.css
@@ -11,6 +11,7 @@ body {
 }
 
 .light-border {
+  max-width: 300px;
   border-radius: 8px;
   border: 1px solid #ccc;
   padding: 1em;
@@ -26,7 +27,7 @@ ul {
 }
 
 li {
-  width: 30%;
+  width: 40%;
   margin: 0.5em;
 }
 
@@ -76,4 +77,14 @@ select {
   border: 1px rgb(74, 74, 74) solid;
   text-align: center;
   text-decoration: none;
+}
+
+img {
+  height: 200px;
+  object-fit: cover;
+}
+
+.light-border h2{
+  inline-size: 200px; 
+  overflow: auto;
 }
